# SSHLogger

./: .gitignore  CMakeLists.txt  README.md
includes/network/: connection.hpp  server.hpp
src/: main.cpp  process_logger.cpp
src/network/: connection.cpp  server.cpp
tools/client/: CMakeLists.txt  main.cpp
tools/client/includes/: client.hpp
tools/client/src/: client.cpp
